# c-c--demo

./: README.md
c-c++-demo/register-exit-function/: CMakeLists.txt  README.md
c-c++-demo/register-exit-function/doc/: CMakeLists.txt
c-c++-demo/register-exit-function/src/: CMakeLists.txt  main.c
